Addition of classification agreement and display bugfix

--- a/custom_code/templates/custom_code/partials/classification_form.html
+++ b/custom_code/templates/custom_code/partials/classification_form.html
@@ -6,7 +6,7 @@
     {{ form.tidesclass_other.label_tag }} {{ form.tidesclass_other }}
   </div>
   {{ form.tidesclass_subclass.label_tag }} {{ form.tidesclass_subclass }}
-  <button type="submit" class="btn btn-primary">Submit</button>
+    <br><button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 <script>
